feat: 1.2.0 使用compose语法重构绘图部分 支持 github 热力图 支持docker部署